fix(India Map): fix tooltip clipping issue on mobile

--- a/crowdsource-fe/src/components/Charts/MapChart/MapChart.module.scss
+++ b/crowdsource-fe/src/components/Charts/MapChart/MapChart.module.scss
@@ -18,7 +18,7 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   color: #000;
   left: 10%;
-  margin-left: -75px;
+  margin-left: -35px;
   padding: 10px;
   position: absolute;
   transition: opacity 0.3s;
